Fix gap between footer and page

--- a/src/public/less/common.less
+++ b/src/public/less/common.less
@@ -7,6 +7,10 @@ input[type="text"], input[type="email"], textarea {
 }
 
 // Some useful classes for all pages.
+#page {
+	padding-bottom: 80px;
+}
+
 .old-text-page {
 	padding: 40px 0 80px;
 
