--- a/src/public/less/components/footer.less
+++ b/src/public/less/components/footer.less
@@ -7,7 +7,6 @@
 	-webkit-font-smoothing: antialiased;
 	background-color: #17233b;
 	padding: 40px 0;
-	margin-top: 80px;
 
 	@media (max-width: @screen-sm-max) {
 		text-align: center;
