--- a/src/public/less/components/landing-bottom.less
+++ b/src/public/less/components/landing-bottom.less
@@ -144,7 +144,6 @@
 
 	.used-by {
 		text-align: center;
-		padding-bottom: 80px;
 
 		.section-title {
 			font-size: 24px;
